# FESpace

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cc
ChiMPI/: chi_mpi_map_all2all.h
ChiMesh/: chi_mesh_utils.cc  chi_mesh_utils.h
DiffusionTest/: diffs_00_constrdestr.cc  diffs_01_initialize.cc  diffusion_solver.h
FiniteElementSpace/: CMakeLists.txt  fe_space.cc  fe_space.h  fe_space_01_assemble_nodes.cc  fe_space_01a_utils.cc  fe_space_02_mappings.cc  fe_space_02_nodeordering_cont.cc  fe_space_02_utils.cc  fe_space_03a_sparsity_cfem.cc  fe_space_04_mappings.cc  fe_space_flags.h  fe_space_qp_data.cc  fe_space_qp_data.h  fe_space_structures.h  fe_space_utils.h
FiniteElementSpace/Methods/: FEMappingBase.h  FEMethodBase.h  FENodeInfo.cc  FENodeInfo.h
FiniteElementSpace/Methods/FiniteVolume/: finite_volume.h  fv_mapping.cc  fv_mapping.h  fv_mapping_00_general.cc  fv_mapping_00a_node_info.cc
FiniteElementSpace/Methods/Lagrange/: lagrange_mapping.h  lagrange_mapping_00_general.cc  lagrange_mapping_00a_node_info.cc  lagrange_mapping_02_qpdata.cc
FiniteElementSpace/Methods/PiecewiseLinear/: pwl_mapping.cc  pwl_mapping.h  pwl_mapping_00_general.cc  pwl_mapping_00a_node_info.cc  pwl_mapping_01_ref_element.cc  pwl_mapping_02_qpdata.cc  pwl_mapping_02a_qpdata_slab.cc  pwl_mapping_02b_qpdata_polygon.cc  pwl_mapping_02c_qpdata_polyhedron.cc  pwld.h  pwld_01.cc
FiniteElementSpace/lua/: fe_lua_utils.cc  fe_lua_utils.h  test.cc
RegressionTests/: Test.lua
